# Phishguard

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  adversarial_eval.py  analyze_features.py  api.py  benchmark.py  config.py  docker-compose.yml  extract_features.py  optimize.md  predict.py  pyproject.toml  requirements.txt  train.py  validate_fusion.py
Artifacts/: fusion_engine_plan.md
extension/: api-client.js  background.js  config.js  content.js  manifest.json  popup.html  popup.js
src/: features.py
src/models/: dl_models.py
